# VDIV-2026

./: .gitignore  LICENSE  README.md  Readme.txt  TODO.txt  _tmp_programozoi_pdf.txt  _tmp_utvonaltervezo_pdf.txt  dqn_add_demo.pth  setup.bat  setup.sh
Data/CSV_maps/: test_large-barriers_50x50.csv  test_no-barriers_50x50.csv  test_only-ore_50x50.csv
MarsRover/: C++ hasznalat.tx  Global.py  Map.py  MapClass.py  RoverClass.py  RoverLogger.py  Server.py  Simulation.py  Simulation_env.py  _cpp_path_loader.py  brain.py  cpp_path.pyd  live_rover_test.py  main.py  path.cpp  requirements.txt
MarsRover/C++_path/: CMakelists.txt  path.cpp
MarsRover/MachineLearning/: ML_config.md  PPO-c_test.py  PPO_model_trainer.py  PPO_test.py  RLtest.py  ReinforcedLearning.py  RoverEnv.py  Simulation_env.py  dqn_lib.py  dqn_rover_test.py  dqn_test.py  dqn_test01.py  live_rover_test.py  ppo_shared.py  trained_runner_test.py
MarsRover/cpp_pathfind/: C++ hasznalat.tx  CMakeLists.txt  pyproject.toml
MarsRover/data/: livedata.json  sample_livedata.json  sample_setupdata.json  setupdata.json
MarsRover/tests/: test_ppo_reward.py  test_simulation_daytime.py
Server/: Server.py
backend/: mars_map_50x50.csv
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.vue  (+2 more)
doc/: Frontend_dashboard_doc.md  Frontend_dashboard_doc_en.md  MarsRover_doc.md  PPO_machine_learning_doc.md  Server_doc.md
frontend/: .gitignore  package-lock.json  package.json
setup/: linux.sh  run_dev.py  run_dev_linux.py  run_dev_mac.py  run_dev_win.py  setup_deps.py  windows.bat  windows.sh
(+77 files in other folders)
